# GBC_AMML_Project_Personal

./: README.md  heart_disease_analysis.ipynb  pyproject.toml
